target/classes/META-INF/fabric8/openshift/spring-boot-cxf-jaxrs-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: 3ce888e08119850e916cb435e7ec19de916c1813
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: master
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=spring-boot-cxf-jaxrs&var-version=1.0-SNAPSHOT
  labels:
    app: spring-boot-cxf-jaxrs
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: io.fabric8.quickstarts.cxf.jaxrs
  name: spring-boot-cxf-jaxrs
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: spring-boot-cxf-jaxrs
    provider: fabric8
    group: io.fabric8.quickstarts.cxf.jaxrs
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: 3ce888e08119850e916cb435e7ec19de916c1813
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/git-branch: master
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=spring-boot-cxf-jaxrs&var-version=1.0-SNAPSHOT
      labels:
        app: spring-boot-cxf-jaxrs
        provider: fabric8
        version: 1.0-SNAPSHOT
        group: io.fabric8.quickstarts.cxf.jaxrs
    spec:
      containers:
      - env:
        - name: SPRING_APPLICATION_JSON
          value: '{"server":{"undertow":{"io-threads":1, "worker-threads":2 }}}'
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: spring-boot-cxf-jaxrs:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: "1.0"
            memory: 256Mi
          requests:
            cpu: "0.2"
            memory: 256Mi
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: spring-boot-cxf-jaxrs:latest
    type: ImageChange
