target/classes/META-INF/fabric8/openshift/spring-boot-cxf-jaxrs-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    api.service.kubernetes.io/path: /services/helloservice/sayHello/
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    app: spring-boot-cxf-jaxrs
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: io.fabric8.quickstarts.cxf.jaxrs
  name: spring-boot-cxf-jaxrs
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-boot-cxf-jaxrs
    provider: fabric8
    group: io.fabric8.quickstarts.cxf.jaxrs
