target/classes/META-INF/fabric8/openshift/spring-boot-cxf-jaxrs-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    api.service.kubernetes.io/path: /services/testConnection
  labels:
    expose: "true"
    app: spring-boot-cxf-jaxrs
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: io.fabric8.quickstarts.cxf.jaxrs
  name: spring-boot-cxf-jaxrs
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: spring-boot-cxf-jaxrs
